Fix anchor icon wrap & Safari pre/table scaling

--- a/public/index.css
+++ b/public/index.css
@@ -144,7 +144,9 @@ h5 {
 }
 
 .heading-wrapper {
-	--icon-size: 1rem;
+	--icon-size-x: 2rem;
+	--icon-size-y: 1.5rem;
+	margin-inline-end: var(--icon-size-x);
 }
 
 .heading-wrapper:not(:first-child) {
@@ -165,11 +167,14 @@ h5 {
 
 .heading-wrapper > .anchor-link {
 	position: relative;
-	inset-inline-start: 0.75rem;
-	width: var(--icon-size);
-	height: var(--icon-size);
+	display: inline-flex;
+	margin-inline-end: calc(-1 * var(--icon-size-x));
+	width: var(--icon-size-x);
+	height: var(--icon-size-y);
 	color: var(--theme-text-light);
 	text-decoration: none;
+	justify-content: center;
+	vertical-align: baseline;
 }
 
 /* Float anchor links to the left of headings on larger screens. */
@@ -179,24 +184,11 @@ h5 {
 		flex-direction: row-reverse;
 		justify-content: flex-end;
 		align-items: baseline;
-		margin-inline-start: calc(-1 * var(--icon-size));
+		margin-inline-start: calc(-1 * var(--icon-size-x));
 	}
 
 	.heading-wrapper > .anchor-link {
-		inset-inline-start: -0.75rem;
-	}
-
-	.heading-wrapper .anchor-icon {
-		position: relative;
-		bottom: var(--icon-baseline, 0);
-	}
-
-	.heading-wrapper.level-h2 .anchor-icon {
-		--icon-baseline: 0.35rem;
-	}
-
-	.heading-wrapper.level-h3 .anchor-icon {
-		--icon-baseline: 0.15rem;
+		margin-inline-end: 0;
 	}
 }
 
@@ -319,10 +311,10 @@ pre {
 	margin-right: calc(var(--padding-inline) * -1);
 	font-family: var(--font-mono);
 
-	line-height: 1.5;
-	font-size: 0.85em;
+	font-size: 0.85rem;
 	overflow-y: hidden;
 	overflow-x: auto;
+	-webkit-text-size-adjust: none;
 }
 
 thead {
@@ -334,6 +326,7 @@ table {
 	padding: var(--padding-block) 0;
 	margin: 0;
 	border-collapse: collapse;
+	line-height: 1.8;
 }
 
 /* Zebra striping */
@@ -357,6 +350,7 @@ pre {
 	/* override inline styles generated by shiki */
 	background-color: var(--theme-code-bg) !important;
 	color: var(--theme-code-text) !important;
+	line-height: 1.65;
 }
 
 blockquote code {
